# enjambre

./: .editorconfig  .enjambreignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DISCLAIMER.md  HANDOFF.md  LEGAL_RISK_REVIEW.md  LICENSE  NOTICE  PROJECT_SUMMARY.json  PROVIDER_POLICY.md  README.md  README_GUI.md  REPO.md  SECURITY.md  app.py  dashboard.ps1  enjambre-hub.ps1  enjambre-sidecar.spec  enjambre.ps1  enjambre.yaml.example  launch-agents.ps1  launch-review.ps1  pyproject.toml  register-cli.ps1  requirements.txt  setup.ps1  sidecar_entry.py
.github/workflows/: ci.yml
agents/: registered.json
diseno/: ENJAMBRE_Dashboard_Design.md  ENJAMBRE_IA_Coder_UI_README.md  Hub ENJAMBRE.html
diseno/app/: globals.css  layout.tsx  page.tsx
docker/: cli-agent.Dockerfile
docs/: ANALISIS-2026-07-07.md  ARCHITECT_LOOP_BLUEPRINT.md  AUDITORIA-ULTRA-2026-07-12.md  AUTO_UPDATE.md  CLI_AGENT.md  COMPETITIVE_ANALYSIS.md  DESIGN_SYSTEM_REDESIGN.md  E6-COCKPIT-HUD-DESIGN.md  HANDOFF.md  LEGAL_SECURITY_CHECKLIST.md  MIGRATION_TAURI.md  PLAN-FIXES-2026-07-12.md  PLUGIN_SDK.md  ROADMAP.md  ROADMAP_E5.md  ROADMAP_LEVANTAMIENTO.md  SEGUIMIENTO-ADOPCIONES-2026-07-12.md  SOURCES.md  TOOL_CALLING.md  architecture.md  repository_structure.md  similar_projects.md
docs/adr/: 0001-contencion-agente-cli.md
docs/aprendizaje/: ERRORES-Y-FIXES.md
docs/gates/: core-real-orchestration.md  fase2-workspace-seguro.md  fase3-multiagente.md  fase4-github-prs.md  fase5-sandbox.md  fase6-sdk.md  faseA-cockpit-overview.md
examples/: echo_plugin.py
frontend/: .env.example  .gitignore  DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: load-token.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/v0/: SPEC.md
landing/: .gitignore  .npmrc  CREDITS.md  index.html  package-lock.json  package.json  preview.html  vite.config.ts
landing/src/: App.tsx  index.css  (+2 more)
scripts/: seed_demo.py
specs/: cli-agent-v1.md  panel-actividad-por-modelo.md
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: lib.rs  main.rs
tests/: conftest.py  git_helpers.py  mock_api.py  test_agent_loop.py  test_agentfile.py  test_api.py  test_api_token.py  test_api_tools.py  test_changes.py  test_cli.py  test_cli_agent.py  test_cli_api.py  test_commands.py  test_extensions.py  test_gates.py  test_github.py  test_gitops.py  test_host_guard.py  test_hub.py  test_logs.py  test_multiagent.py  test_orchestrator.py  test_paths.py  test_policy.py  test_projects.py  test_providers.py  test_pull_request.py  test_rate_limit.py  test_registry.py  test_sandbox.py  test_sessions.py  test_stats.py  test_tools.py  test_workspace.py
(+128 files in other folders)
