[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enjambre"
version = "0.5.0"
description = "Orquestador local-first de agentes IA de codificacion (BYOK)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
enjambre = "enjambre.cli:main"

[project.optional-dependencies]
gui = ["streamlit>=1.30", "rich>=13"]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import-sort, UP pyupgrade, B bugbear.
select = ["E", "F", "I", "UP", "B"]
