[package]
name = "enjambre-desktop"
version = "0.5.0"
description = "ENJAMBRE - orquestador local-first de agentes IA (shell Tauri)"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
